--- a/prompt_engineering.ipynb
+++ b/prompt_engineering.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,9 +47,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:12: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "<>:17: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "<>:12: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "<>:17: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "C:\\Users\\zheng\\AppData\\Local\\Temp\\ipykernel_15420\\2496532566.py:12: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "  \"\"\"\n",
+      "C:\\Users\\zheng\\AppData\\Local\\Temp\\ipykernel_15420\\2496532566.py:17: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "  \"\"\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Providing clear and specific instructions to a model is essential for guiding it towards the desired output and reducing the chances of irrelevant or incorrect responses, with longer prompts often providing more clarity and context for more detailed and relevant outputs.\n"
+     ]
+    }
+   ],
    "source": [
     "text = f\"\"\"\n",
     "You should express what you want a model to do by \\ \n",
